--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>English Excellence</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href=" https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
   </head>
   <body>
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <load src="partials/header.html" />
+    <load src="partials/mobile-menu.html" />
 
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <load src="partials/hero.html" />
+      <load src="partials/about_us.html" />
+      <load src="partials/our_lessons.html" />
+      <load src="partials/proposal.html" />
+      <load src="partials/our_teachers.html" />
+      <load src="partials/leave_app_form.html" />
+      <load src="partials/reviews.html" />
     </main>
 
     <load src="./partials/footer.html" />
