--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -20,7 +20,6 @@
     />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
     <load src="partials/header.html" />
     <load src="partials/mobile-menu.html" />
 
@@ -35,6 +34,8 @@
     </main>
 
     <load src="./partials/footer.html" />
+
+    <div class="js-menu-overlay"></div>
 
     <script type="module" src="./main.js"></script>
   </body>
