--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
   <body>
     <load src="partials/header.html" />
     <load src="partials/mobile-menu.html" />
+    <script src="https://unpkg.com/body-scroll-lock/lib/bodyScrollLock.min.js"></script>
 
     <main>
       <load src="partials/hero.html" />
