--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
     <load src="partials/header.html" />
     <load src="partials/mobile-menu.html" />
     <script src="https://unpkg.com/body-scroll-lock/lib/bodyScrollLock.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
     <main>
       <load src="partials/hero.html" />
